2008-08-09  Alexander Fehr  <pizzapunk gmail com>

  * transmission-gtk-1.32-1:
  New upstream release.

2008-08-07  Alexander Fehr  <pizzapunk gmail com>

  * transmission-gtk-1.31-1:
  New upstream release.

2008-07-20  Alexander Fehr  <pizzapunk gmail com>

  * transmission-gtk-1.22-1:
  New package, split out from transmission.