@@ -2,7 +2,7 @@
 # Maintainer: Alexander Fehr <pizzapunk gmail com>
 
 pkgname=transmission-gtk
-pkgver=1.32
+pkgver=1.33
 pkgrel=1
 pkgdesc="Fast, easy, and free BitTorrent client (GTK+ GUI)"
 arch=('i686' 'x86_64')
@@ -13,8 +13,8 @@ makedepends=('intltool')
 optdepends=('notification-daemon: Desktop notification support')
 replaces=('transmission')
 install=transmission-gtk.install
-source=(http://download.m0k.org/transmission/files/transmission-$pkgver.tar.bz2)
-md5sums=('2525872f5c95886243f83ed513e3952b')
+source=(http://mirrors.m0k.org/transmission/files/transmission-$pkgver.tar.bz2)
+md5sums=('097a538a10e41c9e631ef23b11a2ddfa')
 
 build() {
   cd "$srcdir/transmission-$pkgver"
